cabal-version:      >=1.10
name:               random-float
version:            0.1.0.0
license:            LGPL-3
build-type:         Simple
extra-source-files: CHANGELOG.md

executable random-float
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        MonadIEEE
        Uniform

    default-language: Haskell2010
    ghc-options:
        -Weverything -Wno-implicit-prelude -Wno-missing-export-lists
        -Wno-missing-local-signatures -Wno-name-shadowing
        -Wno-monomorphism-restriction -Wno-safe -O2

    build-depends:
        base >=4.12 && <4.14,
        splitmix >=0.0.4,
        bytestring -any,
        mtl -any
