cabal-version:      >=1.10
name:               random-float
version:            0.1.0.0
license:            LGPL-3
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MonadIEEE
        Uniform

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Weverything -Wno-implicit-prelude -Wno-missing-export-lists
        -Wno-missing-local-signatures -Wno-name-shadowing
        -Wno-monomorphism-restriction -Wno-safe -Wno-unsafe

    build-depends:
        base >=4.12 && <4.14,
        bytestring -any,
        mtl -any,
        splitmix >=0.0.4,
        statistics -any,
        vector -any

test-suite doctest
    hs-source-dirs:   test
    default-language: Haskell2010

    if impl(ghc >=8.0.2)
        type:          exitcode-stdio-1.0
        main-is:       Doctest.hs
        build-depends:
            base >=4.12 && <4.14,
            doctest >=0.15 && <0.18,
            random-float -any

    else
        type:    exitcode-stdio-1.0
        main-is: NoDoctest.hs

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Weverything -Wno-implicit-prelude -Wno-missing-export-lists
        -Wno-missing-local-signatures -Wno-name-shadowing
        -Wno-monomorphism-restriction -Wno-safe -Wno-unsafe

    build-depends:
        base >=4.12 && <4.14,
        hspec -any,
        hspec-expectations -any,
        math-functions -any,
        mtl -any,
        random-float -any,
        splitmix -any,
        statistics -any,
        vector -any
